# tulyp

./: LICENSE  README.md  pyproject.toml  tulyp
src/: tulyp  utils.py
src/lyrics_sources/: azlyrics.py  genius.py  google.py
src/tulyp/: __init__.py
src/tulyp/config/: constants.py
src/tulyp/exceptions/: lyrics_not_found.py
src/tulyp/lyrics_sources/: azlyrics.py  genius.py  google.py
src/tulyp/screen/: ui.py
src/tulyp/utils/: misc.py
tulyp/: screen.py  tulyp  utils.py
tulyp/lyrics_sources/: azlyrics.py  genius.py  google.py
