[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tulyp"
version = "0.1.1"
authors = [
  { name="pulzar", email="pulzar@envs.net" },
]
description = "Display lyrics of the currently playing song in a terminal."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "beautifulsoup4",
  "dbus-python",
  "lyricsgenius",
  "psutil",
  "requests",
]

[project.scripts]
tulyp = "tulyp:main"

[project.urls]
"Homepage" = "https://github.com/laszloszurok/tulyp"
"Bug Tracker" = "https://github.com/laszloszurok/tulyp/issues"

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true
